k8s/productivity/wakapi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: productivity
  annotations:
    reloader.stakater.com/auto: "true"
    secrets.infisical.com/auto-reload: "true"
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: wakapi-config-file
      containers:
        - name: wakapi
          image: ghcr.io/muety/wakapi:2.18.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/config.yml
              subPath: config.yml
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
