k8s/productivity/wakapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wakapi
  namespace: productivity
  labels:
    app: wakapi
spec:
  selector:
    app: myapp
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
